--- a/package.json
+++ b/package.json
@@ -20,5 +20,15 @@
   "homepage": "https://github.com/TBDG/chatter#readme",
   "devDependencies": {
     "concurrently": "^5.3.0"
+  },
+  "dependencies": {
+    "@types/jest": "^26.0.14",
+    "@types/node": "^14.11.2",
+    "@types/react": "^16.9.49",
+    "@types/react-dom": "^16.9.8",
+    "dotenv": "^8.2.0",
+    "express": "^4.17.1",
+    "socket.io": "^2.3.0",
+    "typescript": "^4.0.3"
   }
 }
