--- a/server/package.json
+++ b/server/package.json
@@ -9,6 +9,9 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/node": "^14.11.2",
+    "dotenv": "^8.2.0",
+    "express": "^4.17.1",
     "nodemon": "^2.0.4"
   }
 }
